Requires:
~~~~~~~~~
- CPSCore > 3.24.2
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Advertised content_lib_states.pt as a more generic information provider
  showing all the current revisions of the current document.
- CMF bugfix: use ExpirationDate metadata instead of ExpiresDate.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- cosmit on testI18n
- Moved boxes skins to CPSBoxes
- the list of roots of sections can be specified explicitly in
  getSectionsRoots.py (default is ['sections']).
- Installer uses the disableEventSubscriber() to disable portal_trees and
  portal_subcriptions during installation.
- Made folder_localrole_search and folder_localrole_form work with
  any id_field for the members directory.