@@ -9,6 +9,9 @@ Bug fixes:
 - Advertised content_lib_states.pt as a more generic information provider
   showing all the current revisions of the current document.
 - CMF bugfix: use ExpirationDate metadata instead of ExpiresDate.
+- Added a method fixupRoots() in cpsinstall.py to update the data model of the
+  sections, workspaces and members folders. This is a temporary fix until we
+  switch to CMFSetup.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - cosmit on testI18n
